--- a/education.html
+++ b/education.html
@@ -79,6 +79,11 @@
     .marker:nth-child(3) { top: 50%; }
     .marker:nth-child(4) { top: 70%; }
     .marker:nth-child(5) { top: 90%; }
+
+    .youtube-video {
+      aspect-ratio: 16 / 9;
+      width: 57%;
+      }
    </style>
 </head>
 
@@ -172,13 +177,12 @@
             </div>
 
          </div><!--/Left Column-->
-
+         
          <!-- Center Column -->
-         <div class="col-md-8 col-xs-5">
+         <div class="col-md-6 col-xs-5">
             <h5>Education</h5>
             <div class="row">
-               <div class="col-md-5 col-xs-5">
-                  <div class="d-flex justify-content-between">
+               <div class="col-md-6">
                      <div class="content">
                         <b>Ph.D. in Computer Science</b><br><span class="duration"></span>
                         <div><i>(Fall 2022 - Current)</i>
@@ -189,8 +193,6 @@
                            Illinois, USA.
                         </div>
                      </div>
-                  </div>
-                  <div class="d-flex justify-content-between">
                      <div class="content">
                         <b>B.S. in Computer Science & Engineering</b><br><span class="duration"></span>
                         <div><i>(March 2014 - November 2018)</i>
@@ -201,8 +203,6 @@
                            Chittagong, Bangladesh.
                         </div>
                      </div>
-                  </div>
-                  <div class="d-flex justify-content-between">
                      <div class="content">
                         <b>Higher Secondary Certificate (HSC)</b><br><span class="duration"></span>
                         <div><i>(June 2011 - June 2013)</i>
@@ -213,8 +213,6 @@
                            Dhaka, Bangladesh.
                         </div>
                      </div>
-                  </div>
-                  <div class="d-flex justify-content-between">
                      <div class="content">
                         <b>Secondary School Certificate (SSC)</b><br><span class="duration"></span>
                         <div><i>(January 2006 - March 2011)</i>
@@ -225,8 +223,6 @@
                            Noakhali, Bangladesh.
                         </div>
                      </div>
-                  </div>
-                  <div class="d-flex justify-content-between">
                      <div class="content">
                         <b>Primary School Certificate (PSC)</b><br><span class="duration"></span>
                         <div><i>(January 2002 - December 2005)</i>
@@ -237,10 +233,9 @@
                            Noakhali, Bangladesh.
                         </div>
                      </div>
-                  </div>
                </div>
-               <div class="col-md-3 col-xs-5">
-                  <div class="d-flex justify-content-between">
+               <div class="col-md-5">
+                  <div class="d-flex">
                      <!--Google map-->
                      <div>
                            <img src="images/education/siu-logo.png" width="90" height="50" />
@@ -253,7 +248,7 @@
                            referrerpolicy="no-referrer-when-downgrade"></iframe>
                      </div>
                   </div>
-                  <div class="d-flex justify-content-between">
+                  <div class="d-flex">
                      <!--Google map-->
                      <div>
                         <img src="images/education/cuet-logo.png" width="90" height="90" />
@@ -266,7 +261,7 @@
                            referrerpolicy="no-referrer-when-downgrade"></iframe>
                      </div>
                   </div>
-                  <div class="d-flex justify-content-between">
+                  <div class="d-flex">
                      <!--Google map-->
                      <div>
                         <img src="images/education/nm-clg-logo.png" width="90" height="90" />
@@ -279,7 +274,7 @@
                            referrerpolicy="no-referrer-when-downgrade"></iframe>
                      </div>
                   </div>
-                  <div class="d-flex justify-content-between">
+                  <div class="d-flex">
                      <!--Google map-->
                         <div>
                            <img src="images/education/pg-logo.png" width="90" height="90" />
@@ -292,23 +287,23 @@
                                  referrerpolicy="no-referrer-when-downgrade"></iframe>
                            </div>
                   </div>
-                  <div class="d-flex justify-content-between">
+                  <div class="d-flex">
                   </div>
                </div>
             </div>
-
          </div><!--/Center Column-->
 
-         <!-- <div class="col-md-1">
-            <div class="line-container">
-               <div class="line"></div>
-               <div class="marker"></div>
-               <div class="marker"></div>
-               <div class="marker"></div>
-               <div class="marker"></div>
-               <div class="marker"></div>
-             </div>
-         </div> -->
+         <div class="col-md-3">
+            <h5>Campus Tour</h5>
+            <iframe class="youtube-video" src="https://www.youtube.com/embed/0hpKkdsP48I" 
+            title="SIU Campus" allowfullscreen></iframe>
+            <iframe class="youtube-video" src="https://www.youtube.com/embed/vLeRR67S1TM" 
+            title="CUET Campus" allowfullscreen></iframe>
+            <iframe class="youtube-video" src="https://www.youtube.com/embed/ljj2uPt6FeY" 
+            title="College Campus" allowfullscreen></iframe>
+            <iframe class="youtube-video" src="https://www.youtube.com/embed/2q9MV8yD9J4" 
+            title="High School Campus" allowfullscreen></iframe>
+         </div>
       </div>
    </div>
 
